tests/arch/riscv/error/compiler/test_riscv_error_compiler_017.out


Error: Unterminated string literal
   ╭─[ assembly:8:34 ]
   │
 8 │     example:    .string "hello world
   │                         ──────┬─────┬  
   │                               ╰──────── While parsing this `string`
   │                                     │  
   │                                     ╰── Caused by this
───╯

Not executed
keyboard[0x0]:''; display[0x0]:''; 

